--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "homepage": "http://saumgarg0402.github.io/location-picker",
   "dependencies": {
+    "@fluentui/react": "^8.14.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/lodash-es": "^4.14.117",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "gh-pages": "^3.1.0",
+    "lodash-es": "^4.17.4",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.32.13",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
